make tweak to the cmakelists file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.22)
 project(tentpitch_sdg VERSION 0.1
-        DESCRIPTION "Modern C++ interface to MPI"
+        DESCRIPTION "Modern C++ Spacetime Discontinuous Galerkin Tentpitching code"
         LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
