Finish the RawPtr<T> class and start building out some of the meshing data structures.

--- a/src/meshing/mesh_abstractions/CMakeLists.txt
+++ b/src/meshing/mesh_abstractions/CMakeLists.txt
@@ -1,5 +1,5 @@
 # set library for the meshing and geometry model abstractions
-add_library(mesh_abstractions oriented_mesh.cpp oriented_mesh.h chamber.fwd.h facet.fwd.h footprint.fwd.h oriented_cell.fwd.h oriented_mesh.fwd.h patch.fwd.h stratified_mesh.fwd.h vertex.fwd.h)
+add_library(mesh_abstractions oriented_mesh.cpp oriented_mesh.h chamber.fwd.h facet.fwd.h footprint.fwd.h oriented_cell.fwd.h oriented_mesh.fwd.h patch.fwd.h stratified_mesh.fwd.h vertex.fwd.h constants.h)
 target_include_directories(mesh_abstractions PRIVATE ${CMAKE_CURRENT_LIST_DIR}/)
 target_sources(mesh_abstractions
                PUBLIC chamber.cpp chamber.h facet.cpp facet.h footprint.cpp footprint.h oriented_cell.cpp oriented_cell.h patch.cpp patch.h stratified_mesh.cpp stratified_mesh.h vertex.cpp vertex.h)
