Updated some of the cmakelists (still have more to do here), added some constant definitions, added an ID Pack structure to carry the ID for a vertex or chamber based on whether it's on the front, footprint, or patch. Also added in Google's open source status macros to work with absl::Statuses more easily. Also built up the initial class definition for the vertex. Still need to integrate a geometry class member and some other info.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ FetchContent_MakeAvailable(googletest)
 
 # include libraries that we need
 include_directories(external/abseil-cpp/)
+include_directories(external)
 include_directories(src/)
 
 # add the subdirectories with stuff to be built
