--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_library(external INTERFACE)
 
 add_subdirectory(abseil-cpp)
-target_link_libraries(external INTERFACE absl)
+add_subdirectory(status_macros)
+target_link_libraries(external INTERFACE absl status_macros)
