Build out some testing related configurations and code and then get all the key tests put together for the OrientedCell as it is defined so far.

--- a/external/status_macros/CMakeLists.txt
+++ b/external/status_macros/CMakeLists.txt
@@ -1,1 +1,1 @@
-add_library(status_macros INTERFACE status_builder.h status_macros.h)
+add_library(status_macros INTERFACE status_builder.h status_macros.h test_status_macros.h)
