--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/abseil-cpp"]
 	path = external/abseil-cpp
 	url = git@github.com:abseil/abseil-cpp.git
+[submodule "external/googletest"]
+	path = external/googletest
+	url = git@github.com:google/googletest.git
