--- a/src/shared/utility/CMakeLists.txt
+++ b/src/shared/utility/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(utility)
+add_library(utility status_macro.cpp status_macro.h)
 set_target_properties(utility PROPERTIES LINKER_LANGUAGE CXX)
 target_include_directories(utility PRIVATE ${CMAKE_CURRENT_LIST_DIR}/)
 target_sources(utility
