Added in interfaces for pool data structures for vertices, facets, and chambers. Using these, defined the oriented mesh class in terms of these abstractions. Update the mesh entity ID pack so that one can specify the ID that is the main one, while still being able to update or read the other IDs if necessary.

--- a/src/meshing/utility/CMakeLists.txt
+++ b/src/meshing/utility/CMakeLists.txt
@@ -1,5 +1,6 @@
 # set library for the meshing and geometry model abstractions
-add_library(meshing_utility INTERFACE)
+add_library(meshing_utility)
 set_target_properties(meshing_utility PROPERTIES LINKER_LANGUAGE CXX)
 target_sources(meshing_utility
-               INTERFACE mesh_entity_id_pack.h)
+               PUBLIC mesh_entity_id_pack.h
+               PRIVATE mesh_entity_id_pack.cpp)
