--- a/src/meshing/utility/CMakeLists.txt
+++ b/src/meshing/utility/CMakeLists.txt
@@ -1,5 +1,5 @@
 # set library for the meshing and geometry model abstractions
-add_library(meshing_utility)
+add_library(meshing_utility topology_util.h)
 set_target_properties(meshing_utility PROPERTIES LINKER_LANGUAGE CXX)
 target_sources(meshing_utility
                PUBLIC mesh_entity_id_pack.h
