build the stratified mesh.

--- a/src/meshing/mesh_abstractions/CMakeLists.txt
+++ b/src/meshing/mesh_abstractions/CMakeLists.txt
@@ -5,7 +5,7 @@ target_sources(mesh_abstractions
                PUBLIC chamber.cpp chamber.h facet.cpp facet.h footprint.cpp footprint.h oriented_cell.cpp oriented_cell.h patch.cpp patch.h stratified_mesh.cpp stratified_mesh.h vertex.cpp vertex.h)
 
 # testing related executables
-add_executable(mesh_abstraction_tests)
+add_executable(mesh_abstraction_tests chamber_pool_generator.h facet_pool_generator.h)
 target_include_directories(mesh_abstraction_tests PRIVATE ${CMAKE_CURRENT_LIST_DIR}/)
 target_sources(mesh_abstraction_tests PRIVATE chamber_test.cpp facet_test.cpp footprint_test.cpp oriented_cell_test.cpp oriented_mesh_test.cpp patch_test.cpp stratified_mesh_test.cpp vertex_test.cpp)
 target_link_libraries(mesh_abstraction_tests gtest_main gmock mesh_abstractions geometry_model absl::status absl::statusor)
